# kyselma

./: .gitignore  README.md  SCHEMA.sql  app.py  db_actions.py  get_questions.py  nick.py  pyproject.toml  question.py  quiz.py  requirements.txt  routes.py
db/: analyse.py  answer.py  db.py  question.py  quiz.py  user.py
routes/: analyse.py  answer.py  base.py  create.py  question.py  tools.py
routes/get/: quiz.py
routes/set/: answers.py  nick.py  question.py  quiz.py
static/: alert-timeout.js  answer.js  create.js  index.html  kys-link-info.js  kyselma.css  menu.css  menu.js  nick-lift.js  pages.css  pages.json
templates/: analyse.html  answer.html  base.html  create.html  info.html  moderate.html  new_answer.html  nick.html  nick_reset.html  question.html  quiz.html
