[tool.poetry]
name = "kyselma"
version = "0.1.0"
description = "Kyselmä - kysele, vastaile ja tutki tuloksia"
authors = ["Marjukka Jämbäck <mjamback@local>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
